--- a/style.css
+++ b/style.css
@@ -1,30 +1,101 @@
 /* Global Styles */
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-    font-family: sans-serif;
-    line-height: 1.5;
+	font-family: Arial, sans-serif;
+	font-size: 16px;
+	line-height: 1.5;
+	color: #2f2e2e;
+	background-color: #f5f5f5;
+}
+
+.container {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 20px;
+}
+
+a {
+	color: #0077b5;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
+	background-color: #fff;
+	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+	padding: 20px 0;
+	position: sticky;
+	top: 0;
+	z-index: 999;
+}
+
+header h1 {
+	font-size: 36px;
+	font-weight: bold;
+	margin-left: 20px;
 }
 
 nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: flex;
 }
 
-nav li {
-    margin: 0;
+nav ul li {
+	margin-right: 20px;
 }
 
+nav ul li:last-child {
+	margin-right: 0;
+}
+
+nav ul li a {
+	font-size: 18px;
+	font-weight: bold;
+	padding: 10px 0;
+	transition: all 0.3s ease;
+}
+
+nav ul li a:hover {
+	color: #0077b5;
+}
+
+main {
+	padding: 50px 0;
+}
+
+section {
+	margin-bottom: 50px;
+}
+
+section h2 {
+	font-size: 24px;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+
+section p {
+	font-size: 16px;
+	margin-bottom: 20px;
+}
+
+footer {
+	background-color: #fff;
+	box-shadow: 0px -1px 5px rgba(0, 0, 0, 0.1);
+	padding: 20px 0;
+}
+
+footer p {
+	font-size: 14px;
+	color: #a7a7a7;
+	text-align: center;
+}
