--- a/style.css
+++ b/style.css
@@ -42,7 +42,19 @@ header h1 {
 	font-weight: bold;
 	margin-left: 20px;
 }
-
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+  }
+  
+  li {
+	margin: 10px 0;
+	padding-left: 20px;
+	background-image: url('bullet.png');
+	background-repeat: no-repeat;
+	background-position: 0 50%;
+  }
 nav ul {
 	list-style: none;
 	margin: 0;
